portfolio/src/main/webapp/style.css
html,
body {
  align-items: center; 
  display: flex; 
  flex-direction: column; 
  font: 25px 'Nunito', sans-serif; 
  height: 100%; 
  margin: 0 auto; 
  width: 100%;
}

#content {
  font: 25px 'Nunito', sans-serif; 
  margin: 10% auto 0 auto; 
  width: 75%;
}

#greeting-container {
  margin-top: 20px;
}

h1 {
  font: 60px 'Quicksand', sans-serif; 
  margin-bottom: 0; 
}

h2 {
  font: 45px 'Quicksand', sans-serif; 
  text-align: center; 
}

section {
  align-items: center; 
  display: flex; 
  min-height: 100%;
  width: 80%;
}

/* Header */

#header {
  display: flex; 
  justify-content: space-around;
}

#profile {
  border-radius: 100%;
  width: 60%;
}

#left {
  align-items:center; 
  display: flex; 
  justify-content: center; 
  width: 35%;
}

#right {
  display: flex; 
  flex-direction: column; 
  width: 65%; 
}

ul {
  list-style-type: circle; 
}

li {
  padding: 0 0 20px 0; 
}

/* About Section */ 

#about-me-list li:nth-child(2n) {
  list-style-type: none; 
  text-align: center; 
}

.about-img {
  height: 200px; 
  margin: 5px 5px 20px 0; 
}

/* Gallery */ 

#gallery {
  display: flex; 
  justify-content: center;
  width: 100%; 
}

.column {
  display: flex;
  flex-direction: column; 
  margin-right: 10px;
  margin-left: 10px;
  width: 24%; 
}

.location {
  margin-bottom: 10px;
  position: relative; 
  width: 100%; 
}

.location-img {
  width: 100%; 
}

.location-label {
  display: none; 
  font-weight: bold; 
  left: 50%;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 99; 
}

